; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_normal.c_reset_VIsual_and_resel.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_normal.c_reset_VIsual_and_resel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIsual_active = common dso_local global i64 0, align 8
@INVERTED = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@VIsual_reselect = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reset_VIsual_and_resel() #0 {
  %1 = load i64, i64* @VIsual_active, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = call i32 (...) @end_visual_mode()
  %5 = load i32, i32* @INVERTED, align 4
  %6 = call i32 @redraw_curbuf_later(i32 %5)
  br label %7

7:                                                ; preds = %3, %0
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* @VIsual_reselect, align 4
  ret void
}

declare dso_local i32 @end_visual_mode(...) #1

declare dso_local i32 @redraw_curbuf_later(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
